fix: dialog z-index bug

--- a/packages/giantgo-render/src/styles/_form-design.scss
+++ b/packages/giantgo-render/src/styles/_form-design.scss
@@ -46,36 +46,4 @@
     border-left: 1px solid var(--el-border-color-light);
     border-right: 1px solid var(--el-border-color-light);
   }
-
-  .json-box {
-    height: 500px;
-    overflow: auto;
-
-    .vue-codemirror-wrap {
-      height: 100%;
-
-      .CodeMirror-wrap {
-        height: 100%;
-
-        .CodeMirror-scroll {
-          height: 100%;
-          width: 100%;
-        }
-
-        pre.CodeMirror-line,
-        .CodeMirror-linenumber {
-          min-height: 21px;
-          line-height: 21px;
-        }
-
-        .CodeMirror-sizer {
-          margin-left: 35px !important;
-        }
-
-        .CodeMirror-gutter {
-          min-width: 34px;
-        }
-      }
-    }
-  }
 }
